# Proton

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  clang-gnu_Toolchain.cmake  clang-msvc_Toolchain.cmake  compile_commands.json
Example/: Example.cpp
Include/Proton/: Simd.h
Include/Proton/SIMD/: Simd.h
Include/Proton/SIMD/AVX/: f32.h  f64.h  i32.h  i64.h
Include/Proton/SIMD/Generic/: f32.h  f64.h  i32.h  i64.h
Include/Proton/SIMD/SSE/: f32.h  f64.h  i32.h  i64.h
Source/: Ruler.cpp
